--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -187,9 +187,12 @@
               <span class="card-info-str">
                 {{ transaction[1] }}
                 <mat-chip-list class="right" *ngIf="transaction[5]"
-                  ><mat-chip class="chip-color">{{
-                    transaction[5]
-                  }}</mat-chip></mat-chip-list
+                  ><mat-chip
+                    class="chip-color"
+                    *ngFor="let comment of transaction[5].split(',')"
+                  >
+                    {{comment}}
+                  </mat-chip></mat-chip-list
                 >
               </span>
             </mat-card-content>
