route changes, recent form, beautifications

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -169,7 +169,7 @@
               <a
                 *ngIf="(transaction[0] | isToday)"
                 class="right"
-                routerLink="transactions/{{transaction[9]}}/show"
+                routerLink="/transactions/{{transaction[9]}}/show"
               >
                 <mat-icon>more_vert</mat-icon>
               </a>
