--- a/src/app/gmap/gmap.component.html
+++ b/src/app/gmap/gmap.component.html
@@ -1,2 +1,2 @@
-<div *ngIf="loading" class="center">loading map ...</div>
+<mat-progress-bar mode="query" *ngIf="loading"></mat-progress-bar>
 <div #map class="gmap"></div>
