--- a/src/app/gmap/gmap.component.scss
+++ b/src/app/gmap/gmap.component.scss
@@ -2,3 +2,12 @@
   height: -webkit-fill-available;
   width: -webkit-fill-available;
 }
+.gmap-month {
+  background: transparent;
+  position: absolute;
+  z-index: 10;
+  margin-left: 20%;
+}
+.mat-select-value{
+  color: white;
+}
