--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar mode="query" *ngIf="!online" color="warn" class="fixed"></mat-progress-bar>
 <div
   id="fab-dismiss"
   *ngIf="fabTogglerState === 'active'"
