--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -36,3 +36,12 @@
 .loading {
   top: -28px;
 }
+
+.fixed {
+  position: fixed;
+  float: left;
+  width: 2%;
+  margin-left: 85%;
+  margin-top: 3%;
+  z-index: 100;
+}
