--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -187,7 +187,7 @@
                 <mat-chip-list class="right" *ngIf="transaction[5]"
                   ><mat-chip
                     class="chip-color"
-                    *ngFor="let comment of transaction[5].split(',')"
+                    *ngFor="let comment of transaction[5].toString().split(',')"
                   >
                     {{ comment }}
                   </mat-chip></mat-chip-list
