--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -45,3 +45,11 @@
   margin-top: 3%;
   z-index: 100;
 }
+.balance-chip {
+  width: 160px;
+  display: block;
+  text-align: center;
+}
+.bal-container {
+  margin-left: -105px;
+}
