--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -73,6 +73,10 @@
   background-color: #fff;
   color: #000;
 }
+.selected-chip {
+  background-color: brown;
+  color: white;
+}
 .mat-drawer-container {
   background-color: #fff;
   height: 900px;
