--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -113,6 +113,10 @@
   width: 45px;
   min-width: 45px;
 }
-.sort-keys{
+.sort-keys {
   text-align: left;
+}
+.date-range,
+.amount-range {
+  width: 40%;
 }
