--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -19,7 +19,13 @@
       </button>
       <mat-form-field class="mat-form-elem">
         <mat-icon matPrefix>search</mat-icon>
-        <input type="text" matInput placeholder="Search" [(ngModel)]="query" />
+        <input
+          type="text"
+          placeholder="Search"
+          matInput
+          [matAutocomplete]="auto"
+          [(ngModel)]="query"
+        />
         <button
           mat-button
           *ngIf="query"
@@ -30,6 +36,11 @@
         >
           <mat-icon>close</mat-icon>
         </button>
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let option of autoCompletes | arrayStringFltr:query " [value]="option">
+            {{ option }}
+          </mat-option>
+        </mat-autocomplete>
       </mat-form-field>
       <mat-form-field class="mat-form-elem date-range">
         <input
