--- a/src/app/savings/savings.component.html
+++ b/src/app/savings/savings.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar mode="query" *ngIf="loading"></mat-progress-bar>
-
+<div id="my_dataviz" #my_dataviz></div>
 <mat-accordion>
   <mat-expansion-panel
     (opened)="!this.instalments.length ? this.getInstalments() : null"
