--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -128,7 +128,7 @@
         color="primary"
       >
         <i class="material-icons" [@fabToggler]="{ value: fabTogglerState }"
-          >bubble_chart</i
+          >scatter_plot</i
         >
       </button>
 
