--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -6,5 +6,8 @@
   <button mat-button (click)="splitBubble()" *ngIf="grouped" class="chartBtn">
     <mat-icon>bubble_chart</mat-icon>
   </button>
+  <button mat-button (click)="smallBubble()" class="chartBtnSmall">
+    <mat-icon>grain</mat-icon>
+  </button>
 </span>
 <div id="expensesBubble"></div>
