--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -113,6 +113,10 @@
   width: 45px;
   min-width: 45px;
 }
+.medium {
+  width: 100px;
+  min-width: 100px;
+}
 .sort-keys {
   text-align: left;
 }
