--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -113,14 +113,13 @@
   width: 45px;
   min-width: 45px;
 }
-.medium {
-  width: 100px;
-  min-width: 100px;
-}
 .sort-keys {
   text-align: left;
 }
 .date-range,
 .amount-range {
   width: 40%;
+}
+.small {
+  font-size: small;
 }
