--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -55,3 +55,10 @@
 .bal-container {
   margin-left: -105px;
 }
+.selected-fab {
+  background: black;
+  color: white;
+}
+.fab-secondary {
+  margin-bottom: 15px;
+}
